tdf#97573 Calc tabbar: plus sign with narrower, but min. 2px lines

The "New sheet" icon was a thick cross in some environments instead
of a plus sign.

Change-Id: If5e3ff189b4aca1ef6a61172998675489796934a